# Sparsh

./: README.md
Final Task/: video_odometry_node.py
Final Task/visual_odometry/: package.xml  setup.cfg  setup.py
Final Task/visual_odometry/launch/: visual_odometry_launch.py
Final Task/visual_odometry/visual_odometry/: v2.py  visual_odometry_node.py
Path_Finder/: CMakeLists.txt  package.xml
Path_Finder/src/: pathfinder.cpp
Task 2/: Freyja_Pumpkins.csv  Gotem Pumpkins.csv  regressionmodel.ipynb
Task 2.1/: logistic_regression.ipynb
Task 2.2/: bonus_task.ipynb  output.csv
Task 3.0 and 3.3/: Kmeans.ipynb
Task 3.2/: Decission_Tree.ipynb
Task 4.0/: Neural_Network.ipynb
Task 5.0/: CMakeLists.txt  package.xml
Task 5.0/install/: setup.zsh
Task 5.0/install/ros2_chat/lib/ros2_chat/: chat_subscriber
Task 5.0/install/ros2_chat/share/ros2_chat/: local_setup.sh  package.bash  package.ps1  package.sh
Task 5.0/log/: latest_build
Task 5.0/src/: chat_subscriber.cpp
Task 8.0/: CNN.ipynb
ros2_chat/: token.txt
ros2_chat/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_chat/install/ros2_chat/lib/ros2_chat/: chat_publisher
ros2_chat/install/ros2_chat/share/ros2_chat/: package.dsv  package.zsh
ros2_chat/src/: chat_publisher.cpp
task 6.0/: Opencv.ipynb
